--- a/Memoria/capitulos/02_EstadoDelArte.tex
+++ b/Memoria/capitulos/02_EstadoDelArte.tex
@@ -150,7 +150,7 @@ comparte una clasificación global con otros usuarios que también usan la aplic
 
 \begin{figure}[H]
     \centering
-    \subfloat[\centering Ejercicio de Sonid para conocer las notas de un piano]{\label{fig:sonid}\includegraphics[width=0.35\textwidth]{imagenes/c2/sonid.jpeg}}
+    \subfloat[\centering Ejercicio de Sonid para conocer las notas de un piano]{\label{fig:sonid1}\includegraphics[width=0.35\textwidth]{imagenes/c2/sonid.jpeg}}
     \hspace{3em}
     \subfloat[\centering Menú de selección de lecciones de Sonid dividido por escalas]{\label{fig:sonid2}\includegraphics[width=0.35\textwidth]{imagenes/c2/sonid1.jpeg}}
 \end{figure}
