--- a/Memoria/capitulos/03_Requisitos.tex
+++ b/Memoria/capitulos/03_Requisitos.tex
@@ -50,7 +50,7 @@ A continuación, se procederá a describir la visión del sistema y los factores
     \centering
     \includegraphics[width=0.8\textwidth]{imagenes/c3/diagrama.png}
     \caption{Diagrama general de la perspectiva del producto a desarrollar.}
-    \label{fig:artly}
+    \label{fig:perspectiva}
 
 \end{figure}
 Se pretende implementar un sistema que permita el aprendizaje del usuario mediante técnicas de gamificación y ejercicios a resolver. Algunas de estas actividades utilizarán librerías para la detección de notas musicales
@@ -139,8 +139,7 @@ En móviles la pantalla estará dividida en dos partes principales:
     \centering
     \includegraphics[width=0.7\textwidth]{imagenes/c3/boceto.png}
     \caption{Primer boceto de la interfaz de usuario de la página de inicio de la aplicación para los usuarios, donde se muestra la lista de las lecciones}
-    \label{fig:artly}
-
+    \label{fig:boceto}
 \end{figure}
 
 \subsection{Requisitos funcionales}
