--- a/Memoria/capitulos/06_Diseño.tex
+++ b/Memoria/capitulos/06_Diseño.tex
@@ -29,7 +29,7 @@ los logros. También se han definido las referencias que habrá entre los docume
     \centering
     \centerline{\includegraphics[width=\textwidth]{imagenes/c6/bbdd.png}}
     \caption{Diagrama de base de datos del sistema, donde se muestran los documentos que se van a almacenar en nuestra base de datos de MongoDB.}
-    \label{fig:diagramadearquitectura}    
+    \label{fig:diagramadebbdd}    
 \end{figure}
 
 En el diagrama se pueden ver varias referencias entre las colecciones de datos que se explicarán a continuación:
@@ -48,7 +48,7 @@ los atributos y los métodos de cada clase, facilitando así la comprensión de 
     \centering
     \centerline{\includegraphics[width=\textwidth]{imagenes/c6/diagramadeclases.png}}
     \caption{Diagrama de clases del sistema donde se detallan las propiedades y las relaciones de las distintas clases o entidades que tendrá el software.}
-    \label{fig:diagramadearquitectura}    
+    \label{fig:diagramadeclases}    
 \end{figure}
 
 \section{Diagramas de secuencia}
@@ -68,7 +68,7 @@ para un profesor que modifica una lección.
     \centering
     \centerline{\includegraphics[width=\textwidth]{imagenes/c6/diagramadesecuencia2.png}}
     \caption{Diagrama de secuencia de un usuario iniciando sesión, el cual interactuará con la vista para poder hacer la petición al controlador y buscar su usuario en el modelo para la validación. Tras esto, se cambiará la vista a la pantalla principal que lista las lecciones, por lo que la vista deberá hacer otra petición al controlador de lecciones para obtener las lecciones del modelo.}
-    \label{fig:diagramadesecuencia}    
+    \label{fig:diagramadesecuencia2}    
 \end{figure}
 
 \newpage
@@ -206,6 +206,6 @@ Para finalizar la sección se presenta un diagrama de navegación de la aplicaci
     \centering
     \centerline{\includegraphics[width=1.2\textwidth]{imagenes/c6/diagrambocetos.png}}
     \caption{Diagrama de navegación de la aplicación por los distintos bocetos presentados anteriormente que muestra las pantallas que seguirá el usuario cuando utilice la aplicación.}
-    \label{fig:microfono}
+    \label{fig:diagramanavegacion}
 \end{figure}
 
