--- a/Memoria/capitulos/08_Pruebas.tex
+++ b/Memoria/capitulos/08_Pruebas.tex
@@ -8,9 +8,9 @@ El objetivo de las pruebas es comprobar que el sistema cumple con los requisitos
 Para realizar las pruebas se han utilizado los siguientes paquetes:
 
 \begin{itemize}
-    \item \textbf{flutter\_test}: paquete que contiene las clases necesarias para realizar las pruebas de unidad.
+    \item \textbf{flutter\_test}: paquete que contiene las clases necesarias para realizar las pruebas de unidad ~\cite{fluttertest}.
     \item \textbf{nock}: paquete que permite simular las peticiones HTTP realizadas por la aplicación y devolver una respuesta simulada ~\cite{nockpackage}. 
-    \item \textbf{flutter\_driver}: paquete que contiene las clases necesarias para realizar las pruebas de integración. 
+    \item \textbf{flutter\_driver}: paquete que contiene las clases necesarias para realizar las pruebas de integración ~\cite{flutterdriver}. 
 \end{itemize}
 
 
